separate by loose parts breaks custom normals #80165

Closed
opened 2020-08-27 19:14:52 +02:00 by michael campbell · 13 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-24 10:28, hash: cb8da6efce
Worked: (newest version of Blender that worked as expected)

open a model that has multiple parts and has custom normals, go into edit mode, select all faces, press p, choose select by loose parts. The normals are lost on all but one of the pieces. Seperate by selection doesn't lose normals

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-24 10:28, hash: `cb8da6efce` Worked: (newest version of Blender that worked as expected) open a model that has multiple parts and has custom normals, go into edit mode, select all faces, press p, choose select by loose parts. The normals are lost on all but one of the pieces. Seperate by selection doesn't lose normals

Added subscriber: @3di

Added subscriber: @3di
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Cannot reproduce:

#80165.blend

Looks like this in multi-object-editmode afterwards (which is the same as prior):
image.png

Does it fail for you in above fail as well?
If not, could you provide a simple example blend file that shows the issue?

Cannot reproduce: [#80165.blend](https://archive.blender.org/developer/F8815890/T80165.blend) Looks like this in multi-object-editmode afterwards (which is the same as prior): ![image.png](https://archive.blender.org/developer/F8815891/image.png) Does it fail for you in above fail as well? If not, could you provide a simple example blend file that shows the issue?

I thought you might have hit the nail on the head, so I joined all of the objects together and then went into edit mode and tried to separate by loose parts, but the problem still persists.

Open the below file, select the object, go into edit mode, press p, choose separate by loose parts. The custom normals are still there for both resulting objects, but the large object's custom normals are completely mangled up. Manually selecting each piece one at a time and choosing separate by selection works fine.

separate by loose parts breaks custom normals of resulting pieces.blend

I thought you might have hit the nail on the head, so I joined all of the objects together and then went into edit mode and tried to separate by loose parts, but the problem still persists. Open the below file, select the object, go into edit mode, press p, choose separate by loose parts. The custom normals are still there for both resulting objects, but the large object's custom normals are completely mangled up. Manually selecting each piece one at a time and choosing separate by selection works fine. [separate by loose parts breaks custom normals of resulting pieces.blend](https://archive.blender.org/developer/F8816126/separate_by_loose_parts_breaks_custom_normals_of_resulting_pieces.blend)
Member

Hm, I do see a slight difference between the methods indeed.
Is that what you mean?

one object
image.png

separate by loose parts
image.png

separate by selection
image.png

Hm, I do see a slight difference between the methods indeed. Is that what you mean? one object ![image.png](https://archive.blender.org/developer/F8816843/image.png) separate by loose parts ![image.png](https://archive.blender.org/developer/F8816845/image.png) separate by selection ![image.png](https://archive.blender.org/developer/F8816847/image.png)

It’s easier to see the problem by looking at the shading in the top right corner of the recess rather than the normals, but yes, if you’ve followed the instructions above correctly then these graphics will be showing the problem.

It’s easier to see the problem by looking at the shading in the top right corner of the recess rather than the normals, but yes, if you’ve followed the instructions above correctly then these graphics will be showing the problem.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

I have not investigated in depth, but there is some difference in bmo_mesh_copy and BM_mesh_copy_arrays which is likely to cause this.

I believe this is a bug.

I have not investigated in depth, but there is some difference in `bmo_mesh_copy` and `BM_mesh_copy_arrays` which is likely to cause this. I believe this is a bug.

Added subscriber: @patjan

Added subscriber: @patjan
Janusch Patas self-assigned this 2020-10-19 22:36:27 +02:00

#80165.png
That's what I get. I am at the most current commit: aa244a7a68
I would like to try to resolve this one.

![#80165.png](https://archive.blender.org/developer/F9017751/T80165.png) That's what I get. I am at the most current commit: aa244a7a68d I would like to try to resolve this one.

This issue was referenced by 67c7fe6ad6

This issue was referenced by 67c7fe6ad62e18b78ef70428e8eead8fdba65100

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80165
No description provided.