Fix T80165: Separate by loose parts breaks custom normals

- Add NULL check for BKE_lnor_spacearr_clear
- Remove unnecessary 'use_toolflags' with BMesh creation.